--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Welcome Message
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,16 +6,33 @@ on:
       - master
 
 jobs:
-  display-message-ubuntu:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Print Welcome Message on Ubuntu
-      run: echo "welcome ajay mewada on github action"
+    - name: Checkout Code
+      uses: actions/checkout@v2
 
-  display-message-windows:
-    runs-on: windows-latest
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
 
     steps:
-    - name: Print Welcome Message on Windows
-      run: echo "welcome ajay mewada on github action"
+    - name: Checkout Code
+      uses: actions/checkout@v2
+
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'your-app-name'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: '**/target/*.?(war|jar)'
